--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: "com.android.application"
-apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
@@ -129,7 +128,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.newversion"
+        applicationId "com.apppletzi"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
