--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'newVersion' do
-  # Pods for newVersion
+target 'AppPletzi' do
+  # Pods for AppPletzi
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
@@ -27,7 +27,7 @@ target 'newVersion' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'newVersionTests' do
+  target 'AppPletziTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -35,10 +35,10 @@ target 'newVersion' do
   use_native_modules!
 end
 
-target 'newVersion-tvOS' do
-  # Pods for newVersion-tvOS
+target 'AppPletzi-tvOS' do
+  # Pods for AppPletzi-tvOS
 
-  target 'newVersion-tvOSTests' do
+  target 'AppPletzi-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
